# CIFAR10_pytorch_tutorial

./: pyproject.toml
1_intro_to_pytorch/: 1_quickstart.ipynb  model.pth
2_deep_learning_w_pytorch_60_min_blitz/: 1_training_a_classifier.ipynb  cifar_net.pth
3_stats_417_hw/: cifar_1_1_a.pth  hw3.ipynb
deep_learning_w_pytorch_60_min_blitz/: 1_tensors.ipynb  2_intro_to_autograd.ipynb  3_neural_networks.ipynb  4_training_a_classifier.ipynb  cifar_net.pth
