[tool.poetry]
name = "pytorch-tutorials"
version = "0.1.0"
description = ""
authors = ["dan-kwon <danielkwon02@gmail.com>"]
readme = "README.md"
packages = [{include = "pytorch_tutorials"}]

[tool.poetry.dependencies]
python = "^3.10"
torchvision = "^0.16.1"
torch = "^2.1.1"
torchaudio = "^2.1.1"
matplotlib = "^3.8.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
